move updated sojourner into main section
this neat pwa has been updated with the 2023 schedule, it includes the ability to watch streams and has a nice event map, jarek will be at the conference too, so please give him a boost!

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -9,6 +9,10 @@ Ways to have the schedule with you at all times, without wasting trees:
 
 <h3>Apps for Mobile Devices, tested for 2022</h3>
 <ul>
+<li><b>Progressive Web App: Sojourner</b><br />
+    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
+    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
+</li>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-Droid</a>.<br />
@@ -48,10 +52,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 
 <h3>Apps for Mobile Devices, archive</h3>
 <ul>
-<li><b>Progressive Web App: Sojourner (2021)</b><br />
-    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
-</li>
 <li><b>Android: FOSDEM (2020)</b><br />
     <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
