--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -18,7 +18,7 @@ navtitle: T-shirts
 	    T-shirts will be available at the infodesks in the K and H building. An online presale will be announced if time allows.
         </p>
         <h5>Hoodies</h5>
-        <img src="asset:hoodie" alt="2023 hoodie design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" />
+	<!--<img src="asset:hoodie" alt="2023 hoodie design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" /> -->
         <p>
             The hoodie design this year is black with the FOSDEM 2023 logo. They're yours in exchange for a donation of
             €50.
