T-shirt pre-sale.

--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -15,7 +15,8 @@ navtitle: T-shirts
             S, M, L, XL, XXL and XXXL.
         </p>
         <p>
-	    T-shirts will be available at the infodesks in the K and H building. An online presale will be announced if time allows.
+	    T-shirts will be available at the infodesks in the K and H building.
+	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.
         </p>
         <h5>Hoodies</h5>
 	<!--<img src="asset:hoodie" alt="2023 hoodie design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" /> -->
@@ -27,7 +28,8 @@ navtitle: T-shirts
             Hoodies are available in S, M, L, XL, XXL and XXXL.
         </p>
         <p>
-	    Hoodies will be available at the infodesks in the K and H building. An online presale will be announced if time allows.
+	Hoodies will be available at the infodesks in the K and H building.
+	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.
         </p>
     </div>
 </div>
