--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -29,7 +29,8 @@ navtitle: T-shirts
         </p>
         <p>
 	Hoodies will be available at the infodesks in the K and H building.
-	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.
+	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.  
+	To answer some queries we've had, when it asks for the shipping address, just enter your billing address - everything will be taken to ULB for you to collect regardless - and ignore the login button as we are not creating accounts on this system.
         </p>
     </div>
 </div>
