Mention T-shirt size limitations too.

--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -30,7 +30,8 @@ navtitle: T-shirts
         <p>
 	Hoodies will be available at the infodesks in the K and H building.
 	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.  
-	To answer some queries we've had, when it asks for the shipping address, just enter your billing address - everything will be taken to ULB for you to collect regardless - and ignore the login button as we are not creating accounts on this system.
+	</p><p>
+	To answer some queries we've had, when it asks for the shipping address, just enter your billing address - everything will be taken to ULB for you to collect regardless - and ignore the login button as we are not creating accounts on this system.  Unfortunately this year we haven't been able to make any of the special smaller or larger sizes - just the range shown above.
         </p>
     </div>
 </div>
