updated services.html with copy from 2020

--- a/content/practical/services.html
+++ b/content/practical/services.html
@@ -5,4 +5,38 @@ navtitle: During the Event
 
 <a name="infodesk"></a><h2>Infodesk</h2>
 <p>Need information about scheduled talks, the location of the rooms or other practicalities?<br/>
-We're happy to assist you at the Infodesk.</p>
+We're happy to assist you at one of the Infodesks.</p>
+<p>Starting in 2013, The main infodesk is located in the K building.</p>
+
+<a name="network"></a><h2>Network</h2>
+<p>Wireless IPv4/IPv6 internet access is be available in most locations.</p>
+<p>The SSID is <code>FOSDEM</code></p>
+
+<a name="cloakroom"></a><h2>Cloak room</h2>
+<p>Tired of carrying your coat, bags or umbrella around? Store them at our free and permanently staffed cloak room.</p>
+<p>Simply follow the signs.</p>
+<p><u>Disclaimer:</u> FOSDEM cannot accept responsibility for the loss or
+damage from any cause whatsoever of items left at the cloak room.</p>
+
+<a name="firstaid"></a><h2>First aid</h2>
+<p>A Red Cross first aid team is present during the entire weekend. Get there using the <a href="https://nav.fosdem.org/l/red_cross/">on-campus interactive map</a> or follow the signs in the K building.</p>
+
+<a name="security"></a><h2>Physical security</h2>
+<p>The goal of FOSDEM is to organise an event where everyone can feel safe and
+comfortable. For that purpose, we have invested in having multiple professional
+security guards during the weekend.</p>
+
+<p>If you see a (potential) problem, please approach one of them or a staff
+member who can be recognised by his/her bright yellow t-shirt with "Staff" on
+the back.</p>
+
+<p>Some guidelines:</p>
+<ul>
+    <li>If you come by car, don't leave any valuables in it.</li>
+    <li>Do not enter a room if the sign says it is full: We need to consider fire safety.</li>
+    <li>Follow instructions given by the security guards or by a staff member: They are meant for your safety and that of others.</li>
+</ul>
+
+<a name="lostfound"></a><h2>Lost &amp; found</h2>
+<p>Found or lost something? Head over to the Infodesk in the K building.</p>
+
