Add info booklet to practical page

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -13,6 +13,12 @@ navcat: true
   we also gratefully accept <a href="page:support/donate">donations</a>.
 </p>
 
+<h3>Information Booklet</h3>
+A free printed <a href="asset:booklet/booklet_2023">information
+booklet</a> is available from the Infodesks in buildings H and K
+to help you to find your way around the event.  There are no printed schedule
+booklets this year.
+
 <!--a name="online"></a>
 <h3>Online component</h3>
 <p>
