T-shirt presale closing.

--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -16,7 +16,7 @@ navtitle: T-shirts
         </p>
         <p>
 	    T-shirts will be available at the infodesks in the K and H building.
-	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.
+	Presale of a limited quantity at <a href="https://treasure.fosdem.org/">treasure.fosdem.org</a> for collection from the K Infodesk on Saturday.  The presale will close during the morning of Monday 30th January.
         </p>
         <h5>Hoodies</h5>
 	<!--<img src="asset:hoodie" alt="2023 hoodie design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" /> -->
