--- a/content/schedule/buildings.html
+++ b/content/schedule/buildings.html
@@ -46,11 +46,11 @@ Here is a list of those buildings, and the rooms in each of them.
   <thead>
     <tr>
     <th>Building</th>
-    <th style="text-align: center;" colspan="<%= cols %>">Rooms</th>
+    <th style="text-align: center;" colspan="<%= cols %>">Physical Rooms</th>
     </tr>
   </thead>
   <tbody>
-    <% $buildings.each do |building, rooms| %>
+    <% $buildings.reject{ |b| b =~ /^[DMIS]/ }.each do |building, rooms| %>
       <tr>
         <th class="title"><a name="<%= building.downcase %>"></a><%= building %></th>
         <% rooms.each do |room| %>
@@ -65,11 +65,37 @@ Here is a list of those buildings, and the rooms in each of them.
   </tbody>
 </table>
 
-<p><b>Talks shown in the D building only take place online.</b></p>
-<p>(The M building holds live test data used before the event.)</p>
+<div class="map">
+   <img style="display: block; margin-left: auto; margin-right: auto" src="asset:campusmap" alt="ULB Solbosch Campus map" title="ULB Solbosch Campus map"}/>
+</div>
 
-      <div class="map">
-        <img style="display: block; margin-left: auto; margin-right: auto" src="asset:campusmap" alt="ULB Solbosch Campus map" title="ULB Solbosch Campus map"}/>
-      </div>
+<h1>Online</h1>
+<p><b>Talks shown in rooms prefixed by D take place online.</b></p>
+<p>(M.test holds live test data used before the event.)</p>
+
+<% cols = $buildings.values.map{|list| list.size}.max %>
+<table class="table table-striped table-bordered table-condensed">
+  <thead>
+    <tr>
+    <th></th>
+    <th style="text-align: center;" colspan="<%= cols %>">Online Rooms</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% $buildings.reject{ |b| b =~ /^[^DMIS]/ }.each do |building, rooms| %>
+      <tr>
+        <th class="title"><a name="<%= building.downcase %>"></a><%= building %></th>
+        <% rooms.each do |room| %>
+          <td><%= l(room) %></td>
+        <% end %>
+        <% remainder = cols - rooms.size %>
+        <% if remainder > 0 %>
+          <td colspan="<%= remainder %>"></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 
 <% end %>
