changed the urls for mivb

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -50,7 +50,7 @@ sponsors_under_navigation: true
 <p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=25"
+  <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=25&amp;_directioncode=V"
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
@@ -59,7 +59,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71"
+  <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=71&amp;_directioncode=F&amp;_mode=rt"
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
@@ -67,7 +67,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=72"
+  <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=72&amp;_directioncode=V"
      title="STIB/MIVB - Bus 72">Bus 72</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>ULB</strong></li>
@@ -75,7 +75,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8"
+  <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=8&amp;_directioncode=F&amp;_mode=rt"
      title="STIB/MIVB - Tram 8">Tram 8</a>
 </strong></dt>
 <dd><ul>
