fixed a character encoding in mivb url for tram2

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -105,7 +105,7 @@ bars in the neighbourhood where you can pass the time!</p>
 <a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=fr&_line=2&_directioncode=F&_mode=rt">Metro line 2</a>, direction Elisabeth</li>
+<li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=2&amp;_directioncode=F&amp;_mode=rt">Metro line 2</a>, direction Elisabeth</li>
 <li>Get off at station <u>Louise</u></li>
 <li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=8&amp;_directioncode=F&amp;_mode=rt">Tram 8</a>, direction Roodebeek</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
