--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -47,11 +47,11 @@ aliases: /sightseeing
   • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
   • Mont des Arts The tour usually ends close to the Cathedral.
   At 16:00, we go to Cinematek, the cinema museum, for a silent movie with live piano accompaniment. Afterwards, we will take public transport back to the ULB.
-  We expect to arrive back at ULB around 18:00.
+  We expect to arrive back at ULB around 18:30.
 </p>
 
 <p>
-<b>The Sunday tour</b> starts at 12:30. We'll discover the area closer to the ULB and visit <a href="https://en.wikipedia.org/wiki/Villa_Empain">Villa Empain</a>, a museum in an impressive art deco building nearby, interrupted by a short coffee break.
+<b>The Sunday tour</b> starts at 12:30. We'll discover the area around the <a href="https://en.wikipedia.org/wiki/Belgian_Comic_Strip_Center">Belgian Comics Art museum</a> and visit it, interrupted by a short coffee break.
   We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
@@ -103,10 +103,10 @@ aliases: /sightseeing
 </p>
 
 <p>
-Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand. <b>Registration will start mid-January on this page.</b>
-  <!--Please send an e-mail to
+  Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand. <b>Registration will start mid-January on this page.</b>
+  Please send an e-mail to
   <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during FOSDEM to register for these
-  tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.-->
+  tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.
 </p>
 
 
