--- a/content/schedule/devrooms/software_defined_storage.html
+++ b/content/schedule/devrooms/software_defined_storage.html
@@ -1,5 +1,5 @@
 <p>
-The Software Defined Storage devroom will go into it's fifth round for talks
+The Software Defined Storage devroom will go into it's seventh round for talks
 around Open Source Software Defined Storage projects, management tools
 and real world deployments.
 </p>
