2023 welcome message (still needs all the links adding)

--- a/content/index.html
+++ b/content/index.html
@@ -12,8 +12,30 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   <div class="s-block">
 
     <div class="text-block">
-      <h2>FOSDEM is a free event for software developers to meet, share ideas and collaborate.</h2>
-      <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
+	    <center><h1>WELCOME TO FOSDEM 2023</h1></center>
+       <p>FOSDEM is a free event for software developers to meet, share ideas and collaborate. Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.  You don't need to register.  Just turn up and join in!</p>
+    </div>
+
+    <div class="text-block">
+      <h2>Schedule</h2>
+      <p>Navigate the schedule on this website or using one of the mobile apps.  We have not printed schedule booklets this year although we still have general information booklets.  There's a list of late amendments.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the live stream on your device or select an alternative talk and catch up later by watching the video afterwards.  We've scheduled over 350 hours of content this year.
+      </p>
+
+      <h2>Live Streaming and Chat</h2>
+      <p>Watch sessions online and interact using matrix.  Afterwards, videos will be uploaded and linked to the page for each talk.
+      </p>
+
+      <h2>Online Devrooms</h2>
+      <p>A few talks are happening only online.  These are clearly indicated and are shown in rooms beginning with D for Digital.
+      </p>
+
+      <h2>T-shirts and Hoodies</h2>
+      <p>Purchase your T-shirt or hoodie from the Infodesks in the H and K buildings while stocks last!
+      </p>
+
+      <h2>Feedback</h2>
+      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback - good as well as bad - to feedback@fosdem.org. </p>
+
     </div>
 
     <%
