--- a/content/schedule/streaming.html
+++ b/content/schedule/streaming.html
@@ -92,7 +92,7 @@ are available, too.</p>
 	    <% if r[:slug] =~ /corridor/ or r[:slug] =~ /h3227/ or r[:slug] =~ /h3228/ or r[:slug] =~ /level/ or r[:slug] =~ /ub4228/ or r[:slug] =~ /j1106/ or r[:slug] =~ /infodesk/ or !current_event %>
 	      <td></td>
 	    <% else %>
-            <td><a href="<%=stream_direct_link(current_event)%>">Watch Live!</a></td>
+            <td><a href="<%=current_event[:live_video_link]%>">Watch Live!</a></td>
 	    <% end %>
 	  <% end %>
         </tr>
