Add links to front page

--- a/content/index.html
+++ b/content/index.html
@@ -18,7 +18,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
     <div class="text-block">
       <h2>Schedule</h2>
-      <p>Navigate the schedule on this website or using one of the mobile apps.  We have not printed schedule booklets this year although we still have general information booklets.  There's a list of late amendments.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the live stream on your device or select an alternative talk and catch up later by watching the video afterwards.  We've scheduled over 350 hours of content this year.
+      <p>Navigate the <a href="page:/schedule/">schedule</a> on this website or using one of the <a href="page:/schedule/mobile/">mobile apps</a>.  We have not printed schedule booklets this year although we still have <a href="asset:booklet/booklet_2023">general information booklets</a>.  There's a list of late <a href="page:/schedule/amendments">amendments</a>.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the <a href="page:/schedule/streaming">live stream</a> on your device or select an alternative talk and catch up later by watching the video afterwards.  We've scheduled over 350 hours of content this year.
       </p>
 
       <h2>Live Streaming and Chat</h2>
@@ -34,7 +34,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       </p>
 
       <h2>Feedback</h2>
-      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback - good as well as bad - to feedback@fosdem.org. </p>
+      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback - good as well as bad - to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>. </p>
 
     </div>
 
