about: update staff list

--- a/content/about.html
+++ b/content/about.html
@@ -102,6 +102,7 @@ navtitle: About
     <small>in alphabetical order</small>
     <ul>
       <li>Linda Calders</li>
+      <li>Dan Clark</li>
       <li>Quint Daenen</li>
       <li>Gerry Demaret</li>
       <li>Julien Detroz</li>
@@ -115,12 +116,9 @@ navtitle: About
       <li>Alex Howe</li>
       <li>Alasdair Kergon</li>
       <li>Vasil Kolev</li>
-      <li>Jan-Frederik Martens</li>
       <li>Marthe Parada Delgado</li>
-      <li>Stella Rouzi</li>
       <li>Jonas Scheers</li>
       <li>Kristian Schuhmacher</li>
-      <li>Johan van Selst</li>
       <li>Wouter Simons</li>
       <li>Ieva Supjeva</li>
       <li>Louis Taylor</li>
