Remove duplicate point

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -86,7 +86,7 @@ columns = 3
   <a href="#lightningtalks">lightning talks</a>,
   <a href="#stands">stands</a> and
   <a href="#bofs">BOFs</a>.
-  <!--a href="#certification">certification exams</a-->.
+  <!--a href="#certification">certification exams</a-->
 </p>
 
 <p>
