--- a/content/faq.html
+++ b/content/faq.html
@@ -9,7 +9,6 @@ navtitle: FAQ
 	    <li><a href=#cfp">CFP</a></li>
             <li><a href="#video">Visiting and videos</a></li>
             <li><a href="#video-recordings">Recordings</li>
-            <li><a href="#chat">Chatting and Q&A</a></li>
             <li><a href="#registration">Registration</a></li>
             <li><a href="#fosdem">FOSDEM in general</a></li>
         </ul>
@@ -44,11 +43,7 @@ website.
         </p>
         <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
         <p>
-            All talks can be watched from our website. Go to <a href="page:live">fosdem/2023/live</a>, click on the track
-            that interests you and enjoy the talk.
-        </p>
-        <p>
-            You can also go to the <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
+            All talks can be watched from our website. Go to <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
             <i>Watch the live stream</i>-link and enjoy the presentation.
         </p>
         <a name="video-recordings"></a>
@@ -65,19 +60,6 @@ website.
         <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
         <p>
             Yes! Go over to <a href="https://matrix.to/#/#jobs:fosdem.org?web-instance[element.io]=chat.fosdem.org">#jobs:fosdem.org</a>!
-        </p>
-        <a name="chat"></a>
-        <h4>Chatting and Q&A</h4>
-        <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
-        <p>
-            Easy! Go to <a href="page:live">fosdem/2023/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
-            to go directly to an interesting talk) register an account with <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>
-            (see <a href="page:practical/online">our practical information page</a> for more details) and ask away.
-            Please remember to keep the conversation civil and on topic.
-        </p>
-        <h5><span class="label label-info">Q:</span> Does the video show up in the room once it's time for the talk?</h5>
-        <p>
-            The video will play automatically on the stream at the correct time, but there will be a slight latency.
         </p>
         <a name="registration"></a>
         <h4>Registration</h4>
