Remove info on reserving BoF room for now

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -308,11 +308,7 @@ columns = 3
   BOF stands for Birds Of a Feather who, as the saying goes, flock together.
   FOSDEM has three meeting rooms that may be booked in 30 or 60 minute blocks
   for discussions.  All the meetings are public so anyone who is interested can
-  attend if there is enough space.  Slots in Track C may be reserved in advance
-  through <a href="https://fosdem.org/submit">fosdem.org/submit</a> selecting
-  that track. Mention any time preferences in the Submission Notes.
-  Use the signup sheets on the wall near
-  the Infodesk in building H during the event to book slots in tracks A and B.
+  attend if there is enough space. 
 </p>
 
 <% unless boftracks.empty? %>
