Remove dependency on yaml files per file
To be used together with
https://github.com/FOSDEM/pretalx-integration/tree/master/pretalx-nanoc-yaml-exporter

--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -44,7 +44,7 @@ size = h.values.map(&:size).inject(:+)
             <td><%= e[:end_time] %></td>
 	    <td>
 	      <% e[:attachments].each do |a| %>
-	      <a href="<%= @site.config[:base_url] + ($item_by_id.fetch(a[:identifier])).path %>"><%= a[:type] %></a>
+	      <a href="<%= @site.config[:base_url] + a[:file] %>"><%= a[:type] %></a>
               <% end %>
 	    </td>
 	    <td>
