--- a/content/about.html
+++ b/content/about.html
@@ -110,7 +110,9 @@ navtitle: About
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
       <li>Christian Eisenhammer</li>
+      <li>Koen Glotzbach</li>
       <li>Geert Goossens</li>
+      <li>Sebastian Grömcke</li>
       <li>Jan Gyselinck</li>
       <li>Richard Hartmann</li>
       <li>Alex Howe</li>
@@ -119,6 +121,7 @@ navtitle: About
       <li>Marthe Parada Delgado</li>
       <li>Jonas Scheers</li>
       <li>Kristian Schuhmacher</li>
+      <li>Sebastian Schubert</li>
       <li>Wouter Simons</li>
       <li>Ieva Supjeva</li>
       <li>Louis Taylor</li>
