--- a/content/schedule/devrooms/ruby.html
+++ b/content/schedule/devrooms/ruby.html
@@ -1,18 +1,12 @@
-<p>The <a href="http://fosdem.rubybelgium.be/">Ruby devroom</a> is a focused
-developer room around the Ruby programming language and the open source
-projects which implement it. While the Ruby community does have a number of
-regional conferences devoted to its use, opportunities for those interested in
-the &quot;how it works&quot; of Ruby interpreters and virtual machines are
-practically non-existent. The goal of this developer room is to discuss:</p>
+<p>The Ruby Devroom at FOSDEM will be a hub of all things Ruby-related, celebrating the rich history and bright future of this beloved programming language. Attendees will have the opportunity to learn from and engage with experts in the field, as they share their knowledge and insights on a variety of topics, including:</p>
 
 <ul>
-  <li>The current state of the Ruby language</li>
-  <li>Techniques employed by various VMs and their effectiveness</li>
-  <li>Upcoming Ruby language features, and the challenges/benefits that
-they provide</li>
-  <li>Tools and practices used to certify Ruby language conformity and
-performance</li>
-  <li>Costs and Opportunities provided by the multitude of
-implementations</li>
+  <li>Ruby frameworks and libraries</li>
+  <li>Testing and debugging techniques</li>
+  <li>Innovative uses of Ruby in web development, automation, and beyond</li>
+  <li>Real-world case studies and success stories</li>
 </ul>
 
+<p>
+  Whether you're a seasoned Ruby pro or just starting out, the Ruby Devroom is the place to be for anyone looking to deepen their knowledge, connect with others in the community, and contribute to the ongoing evolution of this versatile and popular language.
+</p>
