📝 devrooms(distributions): Update description text for 2024
In 2024, we did a notable rewrite of the Distributions DevRoom overview.
This is already reflected in our CfP, so this commit brings the FOSDEM
website in line with what we have already published in our CfP.

CC: @amoloney1 @shaunix @sumantro93 @sysrich @kewisch @bennyvasquez

Signed-off-by: Justin W. Flory (he/him) <git@jwf.io>

--- a/content/schedule/devrooms/distributions.html
+++ b/content/schedule/devrooms/distributions.html
@@ -1,16 +1,7 @@
 <p>
-As more and more workloads are being considered for containerization in
-the future and are finally landing in virtualized environments today,
-distributions remain a critical success factor and are more important
-than ever. Containers, like virtual machines, are not magical and
-rely on piles of software being assembled in a way that is repeatable,
-reliable, and functional. This is at the very heart of the problem that
-distributions have always solved.
+Linux distributions are critical digital infrastructure in the 2020s. In addition to their relevance today, they are some of the oldest and most historic Free and Open Source Software communities still in existence. As the context of Linux distributions changes and evolves since their origin in 1991, they remain an important fixture in digital infrastructure.
 
-Each distribution is responsible for building, testing, and releasing
-software as well as managing the lifecycle of each application in the
-collection. Additionally, distributions do very important work in ensuring
-that various versions of upstream software work well together and can
-co-exist. Distributions are also, often responsible, for "de-vendoring"
-upstream software so that security fixes can be applied more quickly.
+Linux distributions do important work in ensuring various versions of upstream software work well together and can co-exist. They are also often responsible for “de-vendoring” upstream software so that security fixes can be applied more quickly. Additionally, Linux distributions have become the centerpiece of other important infrastructure projects like containers and container orchestration software.
+
+This DevRoom provides a unique home for the convergence of several different Linux distribution communities to share ideas and start conversations that matter to all of us. Although there are several different distributions that have different approaches to software packaging, choice of desktop environments, and various use cases, this DevRoom is a historic open forum that is unique to FOSDEM in making a space for all of our communities to share and learn from each other.
 </p>
