--- a/content/schedule/devrooms/dns.html
+++ b/content/schedule/devrooms/dns.html
@@ -1,3 +1,3 @@
 <p>
-The DNS devroom will cover all topics DNS. This year, we have a nice mix of client side and server side talks, with some IoT(h) and performance hacking thrown in for good measure.
+The DNS devroom will cover all topics DNS. This year, we have a nice mix of client side and server side talks, one on the interaction of DNS and NTP, alongside DNS management and non-DNS namespaces.
 </p>
