Mention how to book Junior workshops.

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -330,7 +330,7 @@ columns = 3
 
 <h3><a id="junior"/>Junior<h3>
 <p>
-  Anyone aged 7 to 17 can visit the workshops of FOSDEM junior. Registration will be required for this session. More details will follow later.
+  Anyone aged 7 to 17 can visit the workshops of FOSDEM junior. Registration is required using the link on the individual web page for each workshop.
 </p>
 
 <% unless juniortracks.empty? %>
