removed references to 2022 and irc, changed room link to matrix

--- a/content/practical/matrix_troubleshooting.html
+++ b/content/practical/matrix_troubleshooting.html
@@ -1,8 +1,8 @@
 ---
-title: Troubleshooting Matrix at FOSDEM 2022
+title: Troubleshooting Matrix at FOSDEM
 navcat: true
 ---
-<h3>Troubleshooting Matrix at FOSDEM 2022</h3>
+<h3>Troubleshooting Matrix at FOSDEM</h3>
 <p>
   This year, FOSDEM will once again use Matrix to host the Q&amp;A sessions after each talk, and chat rooms.
 </p>
@@ -13,14 +13,13 @@ navcat: true
 <a name="nomatrix"></a>
 <h3>Without using Matrix, you can still do the following:</h3>
 <ul>
-<li>View the <a href="https://fosdem.org/2022/live/">live streams</a>. </li>
-<li><a href="#ircinstead">Participate in the Matrix chat rooms via IRC</a>, but some Matrix-specific features can&#39;t be bridged to IRC - e.g. upvoting questions.</li>
+<li>View the <a href="https://fosdem.org/live/">live streams</a>. </li>
 </ul>
 
 <a name="quickstart"></a>
 <h3>Quick Start</h3>
 <p>
-  Whilst there are <a href="https://matrix.org/clients/">many ways</a> to participate in the FOSDEM 2022 Matrix rooms, the most straight-forward should be:
+  Whilst there are <a href="https://matrix.org/clients/">many ways</a> to participate in the FOSDEM Matrix rooms, the most straight-forward should be:
 </p>
 
 <ul>
@@ -31,8 +30,8 @@ navcat: true
 <a name="notworking"></a>
 <h3>chat.fosdem.org isn&#39;t working in my browser!</h3>
 <p>
-  Some privacy-oriented browser extensions (such as <a href="https://privacybadger.org/">EFF Privacy Badger</a> may block Element from contacting the FOSDEM Matrix home servers. 
-That&#39;s because <a href="https://github.com/vector-im/element-web">Element</a> operates as a full autonomous Matrix protocol client (independent of the URL where its code is hosted). 
+  Some privacy-oriented browser extensions (such as <a href="https://privacybadger.org/">EFF Privacy Badger</a> may block Element from contacting the FOSDEM Matrix home servers.
+That&#39;s because <a href="https://github.com/vector-im/element-web">Element</a> operates as a full autonomous Matrix protocol client (independent of the URL where its code is hosted).
 </p>
 
 <p>
@@ -74,7 +73,7 @@ That&#39;s because <a href="https://github.com/vector-im/element-web">Element</a
 <a name="otherhomeserver"></a>
 <h3>I&#39;d prefer to just use my existing Matrix client and/or home server (self-hosted or otherwise)</h3>
 <p>
-  You can do that of course, but if you are self-hosting Element, then you should update to at least <a href="https://github.com/vector-im/element-web/releases/tag/v1.7.20">v1.7.20</a>.
+  You can do that of course, but if you are self-hosting Element, then you should use the <a href="https://github.com/element-hq/element-web/releases/latest">latest</a> version.
 </p>
 
 <p>
@@ -100,11 +99,5 @@ That&#39;s because <a href="https://github.com/vector-im/element-web">Element</a
 <a name="help"></a>
 <h3>HELP!</h3>
 <p>
-  If you are still having trouble, you can get to the FOSDEM InfoDesk via IRC at the <code>#fosdem-infodesk</code> channel on the Libera.Chat IRC network.
-</p>
-
-<a name="ircinstead"></a>
-<h3>Participating via IRC</h2>
-<p>
-  Most FOSDEM 2022 Matrix rooms are &quot;bridged&quot; to channels on the Libera.Chat IRC network.  e.g. the <code>#infodesk:fosdem.org</code> Matrix room is bridged to the Libera.Chat IRC channel <code>#fosdem-infodesk</code>.  Other Matrix rooms follow the same pattern.  The keynotes stream is currently on IRC as <code>#fosdem-fosdem</code>.
+  If you are still having trouble, you can get to the FOSDEM InfoDesk via Matrix at the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">#fosdem-infodesk:fosdem.org</a> room.
 </p>
