--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -51,7 +51,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-<b>The Sunday tour</b> starts at 12:30. We'll discover the area around the <a href="https://en.wikipedia.org/wiki/Belgian_Comic_Strip_Center">Belgian Comics Art museum</a> and visit it, interrupted by a short coffee break.
+<b>The Sunday tour</b> starts at 12:30. We'll discover the royal quarter and the <a href="https://en.wikipedia.org/wiki/Palace_of_Coudenberg">Coudenbergh palace</a>, possibly interrupted by a short coffee break.
   We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
