update FQ for 2024

--- a/content/faq.html
+++ b/content/faq.html
@@ -20,7 +20,7 @@ navtitle: FAQ
 	<h4>CFP</h4>
 	<h5><span class="label label-info">Q:</span> When will the CFP open?</h5>
 	<p>
-	    The CFP is out. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">rss feed</a>.
+	    The CFP has closed. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">rss feed</a>.
 	</p>
         <a name="video"></a>
         <h4>Visiting and videos</h4>
@@ -38,8 +38,7 @@ travel and hotel arrangements.
 someone you know locally who is involved in the project and ask them to invite you.
         </p>
 
-        <p>For information regarding Belgian visa requirements, we refer you to Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation
-website.
+        <p>For information regarding Belgian visa requirements, we refer you to <a href="https://diplomatie.belgium.be/en/travel-belgium/visa-belgium">the website of the Belgian ministry of foreign affairs</a>.
         </p>
         <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
         <p>
@@ -50,16 +49,16 @@ website.
         <h5><span class="label label-info">Q:</span> Are talk recordings available?</h5>
         <p>
             All talk recordings will be made available on
-            <a href="https://video.fosdem.org/2023/">video.fosdem.org/2023</a> as soon as the presenter reviewed the contents to
+            <a href="https://video.fosdem.org/2024/">video.fosdem.org/2024</a> as soon as the presenter reviewed the contents to
             make sure the recording is correct.
         </p>
         <p>
-            This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2023">video.fosdem.org/2023</a>
+            This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2024">video.fosdem.org/2024</a>
             for updates!
         </p>
         <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
         <p>
-            Yes! Go over to <a href="https://matrix.to/#/#jobs:fosdem.org?web-instance[element.io]=chat.fosdem.org">#jobs:fosdem.org</a>!
+            Yes! Visit the H building to see the job corner.
         </p>
         <a name="registration"></a>
         <h4>Registration</h4>
@@ -78,7 +77,7 @@ website.
         <h4>FOSDEM in general</h4>
         <h5><span class="label label-info">Q:</span> There is a mistake on the website, where do I report it?</h5>
         <p>
-            You can talk to us in the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk</a> channel on <i>chat.fosdem.org</i> or open an issue on our
+            You can talk to us at the Infodesk (K or H), in the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk</a> channel on <i>chat.fosdem.org</i> or open an issue on our
             <a href="https://github.com/FOSDEM/website">Github repository</a>. Pull requests welcome!
         </p>
     </div>
