mention closing session on front page

--- a/content/index.html
+++ b/content/index.html
@@ -21,6 +21,9 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p>Navigate the <a href="page:/schedule/">schedule</a> on this website or using one of the <a href="page:/schedule/mobile/">mobile apps</a>.  We have not printed schedule booklets this year.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the <a href="page:/schedule/streaming">live stream</a> on your device or select an alternative talk and catch up later by watching the video afterwards.
       </p>
 
+      <h2>Closing Session</h2>
+      <p>Don't miss our closing session - FOSDEM Highlights - in Janson auditorium at 17:00!</p>
+
       <h2>Live Streaming and Chat</h2>
       <p>Watch sessions online and interact using matrix.  Afterwards, videos will be uploaded and linked to the page for each talk.
       </p>
