Post-event home page

--- a/content/index.html
+++ b/content/index.html
@@ -17,24 +17,24 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     </div>
 
     <div class="text-block">
-      <h2>Schedule</h2>
-      <p>Navigate the <a href="page:/schedule/">schedule</a> on this website or using one of the <a href="page:/schedule/mobile/">mobile apps</a>.  We have not printed schedule booklets this year.  Rooms with popular talks might fill up.  When this happens, please don't queue outside or block the corridors.  Watch the <a href="page:/schedule/streaming">live stream</a> on your device or select an alternative talk and catch up later by watching the video afterwards.
-      </p>
+      <h2>Thank You!</h2>
+      <p>Thank You to everyone who contributed in any way to the success of FOSDEM 2024!</p>
 
-      <h2>Closing Session</h2>
-      <p>Don't miss our closing session - FOSDEM Highlights - in Janson auditorium at 17:00!</p>
-
-      <h2>Live Streaming and Chat</h2>
-      <p>Watch sessions online and interact using matrix.  Afterwards, videos will be uploaded and linked to the page for each talk.
-      </p>
-
-      <h2>T-shirts and Hoodies</h2>
-      <p>Purchase your hoodie or T-shirt from the Infodesks while stocks last!   The H building only has T-shirts.  The K building infodesk has both T-shirts and hoodies.
-      </p>
+	<h2>Videos</h2>
+	<p>We are adding a video of each talk to its web page when it is ready.
+	See the <a href="https://review.video.fosdem.org/overview">processing status</a>
+	of individual talks.
+	For everything available so far, look in the right-hand column of
+	the <a href="https://fosdem.org/2024/schedule/events/">complete schedule</a>,
+	or download from <a href="https://video.fosdem.org/2024/">video.fosdem.org/2024</a>
+	(arranged by room name).
+	</p>
 
       <h2>Feedback</h2>
-      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback - good as well as bad - to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>. </p>
+      <p>Please use the links under each event to provide feedback to the speakers.  Send more general feedback to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.  All your feedback, good or bad, and suggestions for future years will be greatly appreciated. 
+      </p>
 
+      <h2>See you in 2025!</h2>
     </div>
 
     <%
