add note about card payment in public transport

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -45,9 +45,9 @@ sponsors_under_navigation: true
 <br />
 <hr/>
 
-<a name="bus"></a><h3>By bus and/or tram</h3>
+<a name="bus"></a><h3>By bus, metro and/or tram</h3>
 
-<p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
+<p>Bus/metro/tram lines provided by the public transport company, STIB/MIVB. Note you can hop in and buy your ticket in the transport by swiping your debit or credit card.</p>
 <dl>
 <dt><strong>
   <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=25&amp;_directioncode=V"
