--- a/content/fringe.html
+++ b/content/fringe.html
@@ -25,14 +25,15 @@ fringe = pretalx_data.fetch('fringe', {})
   </thead>
   <tbody>
     <% fringe.each do |event_name, meta| %>
+    <%puts meta%>
     <tr>
-      <td><a href="<%=  meta[:website] %>"><%= event_name.to_s %></a></td>
-      <td><%= meta[:location] %></td>
-      <td><%= meta[:start] %></td>
-      <td><%= meta[:end] %></td>
-      <td><%= meta[:cost] %></td>
-      <td><%= meta[:registration] %></td>
-      <td><a href="mailto:<%= meta[:contact] %>"><%= meta[:contact] %></a></td>
+      <td><a href="<%=  meta["website"] %>"><%= event_name.to_s %></a></td>
+      <td><%= meta["location"] %></td>
+      <td><%= meta["starts"] %></td>
+      <td><%= meta["ends"] %></td>
+      <td><%= meta["cost"] %></td>
+      <td><%= meta["registration"] %></td>
+      <td><a href="mailto:<%= meta["contact"] %>"><%= meta["contact"] %></a></td>
     </tr>
     <% end %>
   </tbody>
