--- a/content/schedule.html
+++ b/content/schedule.html
@@ -225,7 +225,7 @@ columns = 3
 <div class="container-fluid">
     <div class="row-fluid">
         <% columns = [columns, devrooms.size].min %>
-        <% devrooms.sort_by{|x| x[:title]}.each_slice((devrooms.size / columns).ceil) do |list| %>
+        <% devrooms.sort_by{|x| x[:title].downcase}.each_slice((devrooms.size / columns).ceil) do |list| %>
         <div class="span<%= 9 / columns %>">
             <ul>
                 <% list.each do |t| %>
