--- a/content/schedule.html
+++ b/content/schedule.html
@@ -16,6 +16,7 @@ lt_track = tracks.select{|t| t[:type] == 'lightningtalk'}.first
 ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start_datetime]}
 certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_datetime]}
 boftracks = tracks.select{|t| t[:type] == 'bof'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
+juniortracks = tracks.select{|t| t[:type] == 'junior'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
 columns = 3
 %>
 
@@ -331,9 +332,11 @@ columns = 3
   FOSDEM Junior is a collaboration between FOSDEM, Code Club, CoderDojo, developers, and volunteers to organize workshops and activities for children from age 7 to 17 during the FOSDEM weekend. These activities are for children to learn and get inspired about technology. Last year's activities included microcontrollers, embroidery, plotting, game development, mobile application development, Raspberry Pi's, and Java development.
 </p>
 
-<p>
-  Further details are available on the <a href="page:/schedule/track/junior">FOSDEM Junior page</a>.
-</p>
+<% unless juniortracks.empty? %>
+  <p>
+    Further details are available on the <a href="page:/schedule/track/junior">FOSDEM Junior page</a>.
+  </p>
+<% end %>
 
 <!--a name="certification"></a>
 <h3> Certification Exams</h3>
